# PyFrame2D

./: .gitignore  ProjectStructure.md  main.py  pyproject.toml  readme.md  requirements.txt
Saves/: debug listbox.json  memberUDL debug.json  test1.json
core/: analysis.py  elements.py  model.py
gui/: main_window.py
project_io/: project_files.py  reporting.py
tests/: conftest.py  test_analysis.py  test_basics.py  test_elements.py  test_io.py  test_model.py  test_reporting.py  test_units.py
units/: units.py
