[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyframe2d"
version = "0.1.0"
# Add other metadata if desired
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    # Add other dependencies from requirements.txt
]

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
include = ["core*", "project_io*", "units*"] # Include these packages
# exclude = [] # Optional: exclude specific sub-packages if needed